Updates article to latest context

--- a/toolkits/global/packages/global-article/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-article/scss/10-settings/default.scss
@@ -33,7 +33,7 @@ $article--cta-button-icon-hover-color: white;
 $article--cta-button-border-color: blue;
 $article--cta-button-border-radius: 0;
 
-$article--font-family: $font-family-serif;
+$article--font-family: $context--font-family-serif;
 
 $article--font-sizes: (
 	'font-size-1': 13px,
@@ -60,4 +60,4 @@ $article--grey-palette: (
 	'grey-7': #aaa
 );
 
-$article-metrics-section-heading-font-weight: bold;
+$article-metrics-section-heading-font-weight: $context--font-weight-bold;
