Updates banner to latest context

--- a/toolkits/global/packages/global-banner/scss/10-settings/_default.scss
+++ b/toolkits/global/packages/global-banner/scss/10-settings/_default.scss
@@ -6,7 +6,7 @@
 
 $banner--padding-y: 12px;
 $banner--padding-x: 12px;
-$banner--font: $font-family-sans;
+$banner--font: $context--font-family-sans;
 $banner--font-size: 16px;
 $banner--font-size-small: 14px;
 $banner--link-color: gray;
