Updates global-corporate-footer to latest context

--- a/toolkits/global/packages/global-corporate-footer/scss/10-settings/nature.scss
+++ b/toolkits/global/packages/global-corporate-footer/scss/10-settings/nature.scss
@@ -1,9 +1,12 @@
-$corporate-footer--font-family: $font-family-sans;
+/**
+ * @springernature/global-corporate-footer
+ * Nature skin settings
+ */
+
+// Default button setting
+@import 'default';
+
 $corporate-footer--background-color: #222;
 $corporate-footer--border: none;
-$corporate-footer--legal-padding-top: spacing(4);
 $corporate-footer--font-size: 13px;
 $corporate-footer--text-color: #a2a2a2;
-$corporate-footer--margin-bottom: spacing(0);
-$corporate-footer--padding-top: spacing(16);
-$corporate-footer--padding-bottom: spacing(24);
