--- a/toolkits/global/packages/global-corporate-footer/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-corporate-footer/scss/10-settings/default.scss
@@ -1,4 +1,10 @@
-$corporate-footer--font-family: $font-family-sans;
+/**
+ * @springernature/global-corporate-footer
+ * Default skin settings
+ *
+ */
+
+$corporate-footer--font-family: $context--font-family-sans;
 $corporate-footer--background-color: white;
 $corporate-footer--border: 1px solid lightgrey;
 $corporate-footer--legal-padding-top: spacing(4);
