--- a/toolkits/global/packages/global-meta/scss/10-settings/_nature.scss
+++ b/toolkits/global/packages/global-meta/scss/10-settings/_nature.scss
@@ -6,7 +6,7 @@
 // Default button setting
 @import 'default';
 
-$meta--font-family: $font-family-sans;
+$meta--font-family: $context--font-family-sans;
 $meta--border: 1px solid #bbb;
 $meta--color: inherit;
 $meta--line-height: 1.4;
