--- a/toolkits/global/packages/global-meta/scss/10-settings/_springer.scss
+++ b/toolkits/global/packages/global-meta/scss/10-settings/_springer.scss
@@ -7,7 +7,7 @@
 @import 'default';
 
 $meta--font-size: 1.4rem;
-$meta--font-family: $font-family-sans;
+$meta--font-family: $context--font-family-sans;
 $meta--border: 1px solid greyscale(80);
 $meta--color: greyscale(40);
 $meta--margin-bottom: 4px;
