Updates global-popup to latest context

--- a/toolkits/global/packages/global-popup/scss/50-components/_popup.scss
+++ b/toolkits/global/packages/global-popup/scss/50-components/_popup.scss
@@ -1,7 +1,7 @@
 .js {
 	.c-popup {
 		position: absolute;
-		font-family: $font-family-serif;
+		font-family: $context--font-family-serif;
 		z-index: $popup--zindex;
 		padding: $popup--padding;
 		border: 1px solid $popup--border-color;
