Updates nature-footer to latest context

--- a/toolkits/nature/packages/nature-footer/scss/10-settings/footer.scss
+++ b/toolkits/nature/packages/nature-footer/scss/10-settings/footer.scss
@@ -4,7 +4,8 @@ $footer--font-size: 1.4rem;
 $footer--line-height: 1.4;
 $footer--header-border-bottom: 1px solid greyscale(20);
 $footer--heading-color: greyscale(90);
-    
+$footer--heading-font-family: $context--font-family-sans;
+
 $footer--spacing-small: 8px;
 $footer--spacing-medium: 16px;
 $footer--spacing-large: 24px;
