--- a/toolkits/nature/packages/nature-footer/scss/50-components/footer.scss
+++ b/toolkits/nature/packages/nature-footer/scss/50-components/footer.scss
@@ -84,7 +84,7 @@
 	color: $footer--heading-color;
 	margin-bottom: $footer--spacing-medium;
 	font-weight: bold;
-	font-family: $font-family-sans;
+	font-family: $footer--heading-font-family;
 }
 
 .c-footer__item {
