Updates nature-header to latest context

--- a/toolkits/nature/packages/nature-header/scss/50-components/header-expander.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header-expander.scss
@@ -36,8 +36,8 @@
 	display: inline-block;
 	line-height: 1.4;
 	font-size: 2rem;
-	font-family: $font-family-sans;
-	font-weight: $font-weight-normal;
+	font-family: $context--font-family-sans;
+	font-weight: $context--font-weight-normal;
 }
 
 .c-header-expander__list {
