Updates springer-listing to latest context

--- a/toolkits/springer/packages/springer-listing/scss/10-settings/_listing.scss
+++ b/toolkits/springer/packages/springer-listing/scss/10-settings/_listing.scss
@@ -1,5 +1,5 @@
-$listing--font-family: $font-family-sans;
-$listing--title-font-family: $font-family-serif;
+$listing--font-family: $context--font-family-sans;
+$listing--title-font-family: $context--font-family-serif;
 $listing--title-font-size: 1.8rem;
 $listing--title-font-weight: normal;
 $listing--title-margin-bottom: 4px;
