Updates springer-lists to latest context

--- a/toolkits/springer/packages/springer-lists/scss/10-settings/_list-description.scss
+++ b/toolkits/springer/packages/springer-lists/scss/10-settings/_list-description.scss
@@ -1,3 +1,3 @@
 $list-description--wrapper-margin-bottom: spacing(24);
-$list-description--font-weight: $font-weight-bold;
+$list-description--font-weight: $context--font-weight-bold;
 $list-description--margin-bottom: 0.25em;
