--- a/toolkits/springer/packages/springer-lists/scss/10-settings/_list-group.scss
+++ b/toolkits/springer/packages/springer-lists/scss/10-settings/_list-group.scss
@@ -3,4 +3,4 @@ $list-group--padding-xs: spacing(4) 0;
 $list-group--padding-sm: spacing(8) 0;
 $list-group--padding-md: spacing(16) 0;
 $list-group--padding-lg: spacing(24) 0;
-$list-group--line-height: $line-height-tight;
+$list-group--line-height: $context--line-height-tight;
