Updates springer-publisher-footer to latest context

--- a/toolkits/springer/packages/springer-publisher-footer/scss/10-settings/_publisher-footer.scss
+++ b/toolkits/springer/packages/springer-publisher-footer/scss/10-settings/_publisher-footer.scss
@@ -7,7 +7,7 @@ $publisher-footer--column-gap-large: spacing(32);
 $publisher-footer--focus-border-size: 4px;
 $publisher-footer--heading-color: greyscale(20);
 $publisher-footer--heading-margin-bottom: 0.25em;
-$publisher-footer--heading-weight: $font-weight-bold;
+$publisher-footer--heading-weight: $context--font-weight-bold;
 $publisher-footer--item-padding: 0.25em 0;
 $publisher-footer--menu-section-padding-bottom: spacing(24);
 $publisher-footer--padding: spacing(24);
