Updates springer-user-metadata to latest context

--- a/toolkits/springer/packages/springer-user-metadata/scss/50-components/_user-metadata.scss
+++ b/toolkits/springer/packages/springer-user-metadata/scss/50-components/_user-metadata.scss
@@ -1,5 +1,5 @@
 .c-user-metadata {
-	font-family: $font-family-sans;
+	font-family: $context--font-family-sans;
 	font-size: $user-metadata--font-size;
 	color: $user-metadata--font-colour;
 	line-height: $user-metadata--line-height;
