--- a/toolkits/springer/packages/springer-user-metadata/scss/10-settings/_user-metadata.scss
+++ b/toolkits/springer/packages/springer-user-metadata/scss/10-settings/_user-metadata.scss
@@ -1,5 +1,5 @@
 $user-metadata--padding-y: spacing(24);
 $user-metadata--font-size: $font-size-xxs;
 $user-metadata--font-colour: greyscale(40);
-$user-metadata--line-height: $line-height-tight;
+$user-metadata--line-height: $context--line-height-tight;
 $user-metadata--item-margin-y: spacing(4);
