Updates springernature-modal to latest context

--- a/toolkits/springernature/packages/springernature-modal/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-modal/scss/50-components/enhanced.scss
@@ -8,7 +8,7 @@
 		background-color: #fff;
 		overflow-y: auto;
 		border-top: 3px solid $modal--border-color;
-		font-family: $font-family-serif;
+		font-family: $context--font-family-serif;
 		height: auto;
 		padding: 30px;
 		width: 100%;
