Fix date and copy paste error

--- a/toolkits/global/packages/global-banner/scss/10-settings/_springer.scss
+++ b/toolkits/global/packages/global-banner/scss/10-settings/_springer.scss
@@ -3,7 +3,7 @@
  * Springer skin settings
  */
 
-// Default button setting
+// Default setting
 @import 'default';
 
 $banner--padding-y: spacing(16);
