--- a/toolkits/global/packages/global-corporate-footer/scss/10-settings/nature.scss
+++ b/toolkits/global/packages/global-corporate-footer/scss/10-settings/nature.scss
@@ -3,7 +3,7 @@
  * Nature skin settings
  */
 
-// Default button setting
+// Default setting
 @import 'default';
 
 $corporate-footer--background-color: #222;
