--- a/toolkits/global/packages/global-corporate-footer/scss/10-settings/springer.scss
+++ b/toolkits/global/packages/global-corporate-footer/scss/10-settings/springer.scss
@@ -3,7 +3,7 @@
  * Springer skin settings
  */
 
-// Default button setting
+// Default setting
 @import 'default';
 
 $corporate-footer--background-color: greyscale(95);
