--- a/toolkits/global/packages/global-banner/scss/10-settings/_nature.scss
+++ b/toolkits/global/packages/global-banner/scss/10-settings/_nature.scss
@@ -3,7 +3,7 @@
  * Nature skin settings
  */
 
-// Default button setting
+// Default setting
 @import 'default';
 
 $banner--padding-y: spacing(8);
