--- a/toolkits/global/packages/global-card/scss/10-settings/springer.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/springer.scss
@@ -3,7 +3,7 @@
  * Springer branding for component
  */
 
-// Default button setting
+// Default setting
 @import 'default';
 
 // Springer overrides
