--- a/toolkits/global/packages/global-meta/scss/10-settings/_springer.scss
+++ b/toolkits/global/packages/global-meta/scss/10-settings/_springer.scss
@@ -3,7 +3,7 @@
  * Springer branding for component
  */
 
-// Default button setting
+// Default setting
 @import 'default';
 
 $meta--font-size: 1.4rem;
