--- a/context/brand-context/springer/scss/10-settings/buttons.scss
+++ b/context/brand-context/springer/scss/10-settings/buttons.scss
@@ -5,9 +5,9 @@
  */
 
 $context--button-font-family: $context--font-family-sans;
-$context--button-font-size-small: $font-size-xs;
-$context--button-font-size-normal: $font-size-sm;
-$context--button-font-size-large: $font-size-sm;
+$context--button-font-size-small: $context--font-size-xs;
+$context--button-font-size-normal: $context--font-size-sm;
+$context--button-font-size-large: $context--font-size-sm;
 
 // Button Themes
 // Variables to set themes styles
