--- a/context/brand-context/springer/scss/30-mixins/typography.scss
+++ b/context/brand-context/springer/scss/30-mixins/typography.scss
@@ -5,7 +5,7 @@
 
 @mixin u-text-furniture {
 	font-family: $context--font-family-sans;
-	font-size: $font-size-furniture;
+	font-size: $context--font-size-furniture;
 }
 
 @mixin u-text-right {
