--- a/context/brand-context/springer/scss/40-base/tables.scss
+++ b/context/brand-context/springer/scss/40-base/tables.scss
@@ -6,7 +6,7 @@ table {
 
 th,
 td {
-	font-size: $font-size-sm;
+	font-size: $context--font-size-sm;
 	border: 1px solid greyscale(65);
 	padding: 0.3em 0.6em;
 	vertical-align: top;
