--- a/context/brand-context/springer/scss/60-utilities/typography.scss
+++ b/context/brand-context/springer/scss/60-utilities/typography.scss
@@ -1,17 +1,17 @@
 .u-text-xs {
-	font-size: $font-size-xs;
+	font-size: $context--font-size-xs;
 }
 
 .u-text-sm {
-	font-size: $font-size-sm;
+	font-size: $context--font-size-sm;
 }
 
 .u-text-md {
-	font-size: $font-size-md;
+	font-size: $context--font-size-md;
 }
 
 .u-text-lg {
-	font-size: $font-size-lg;
+	font-size: $context--font-size-lg;
 }
 
 .u-text-sans-serif {
