Updates global-pagination to latest context

--- a/toolkits/global/packages/global-pagination/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-pagination/scss/10-settings/default.scss
@@ -1,5 +1,5 @@
 $pagination--padding: spacing(16);
-$pagination--font-size: $font-size-xs;
+$pagination--font-size: $context--font-size-xs;
 
 $pagination--link-active-color: white;
 $pagination--link-active-border-color: greyscale(40);
