Updates global-status-message  to latest context

--- a/toolkits/global/packages/global-status-message/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-status-message/scss/10-settings/default.scss
@@ -6,7 +6,7 @@ $status-message-theme: (
 );
 
 $status-message--font-family: $context--font-family-sans;
-$status-message--font-size: $font-size-sm;
+$status-message--font-size: $context--font-size-sm;
 $status-message--border-radius: 2px;
 $status-message--boxed-border: 4px;
 $status-message--background-color: white;
