--- a/toolkits/springer/packages/springer-box/scss/10-settings/_box.scss
+++ b/toolkits/springer/packages/springer-box/scss/10-settings/_box.scss
@@ -5,7 +5,7 @@ $box--border: 1px solid color('action-dull', 0.3);
 $box--line-height: 1.3;
 $box--margin-bottom: spacing(16);
 $box--padding: spacing(16);
-$box--heading-font-size: $font-size-lg;
+$box--heading-font-size: $context--font-size-lg;
 $box--heading-margin: 0 0 spacing(16);
 $box--heading-padding: 0 0 spacing(8);
 $box--border-radius: 2px;
