--- a/toolkits/springer/packages/springer-pagination/scss/10-settings/pagination.scss
+++ b/toolkits/springer/packages/springer-pagination/scss/10-settings/pagination.scss
@@ -1,5 +1,5 @@
 $pagination--padding: spacing(16);
-$pagination--font-size: $font-size-xs;
+$pagination--font-size: $context--font-size-xs;
 
 $pagination--link-active-color: white;
 $pagination--link-active-border-color: greyscale(40);
