--- a/context/brand-context/springernature/scss/10-settings/breakpoints.scss
+++ b/context/brand-context/springernature/scss/10-settings/breakpoints.scss
@@ -4,8 +4,8 @@
  */
 
 $context--breakpoints: (
-	'handheld': 420px,
-	'tablet-vertical': 768px,
-	'tablet': 1024px,
-	'widescreen': 1528px
+	'tablet-width': 480px,
+	'tablet-wide-width': 768px,
+	'wide-layout': 876px,
+	'desktop-width': 1024px
 );
