--- a/context/brand-context/springernature/scss/30-mixins/typography.scss
+++ b/context/brand-context/springernature/scss/30-mixins/typography.scss
@@ -1,64 +1,42 @@
-
 // Headings
 
 @mixin u-h1() {
-	font-weight: lighter;
-	font-size: $context--font-size-h1;
-	margin-bottom: spacing(48);
-	font-family: $context--font-family-serif;
-  line-height: 1.2;
+	font-weight: $font-weight-light;
+	font-size: $font-size-h1;
+	font-size: unquote('min(max(#{$font-size-h1-min}, 4vw), #{$font-size-h1})');
+	margin-bottom: spacing(16);
+	font-family: $font-family-serif;
+	line-height: unquote('min(max(#{$line-height-h1-min}, 4vw), #{$line-height-h1})');
 }
 
 @mixin u-h2() {
-	font-weight: lighter;
-	font-size: $context--font-size-h2;
-	margin-bottom:  spacing(32);
-	font-family: $context--font-family-serif;
-  line-height: $context--heading-line-height;
+	font-weight: $font-weight-normal;
+	font-size: unquote('min(max(#{$font-size-h2-min}, 4vw), #{$font-size-h2})');
+	margin-bottom: spacing(16);
+	font-family: $font-family-serif;
+	line-height: unquote('min(max(#{$line-height-h2-min}, 4vw), #{$line-height-h2})');
 }
 
 @mixin u-h3() {
-	font-weight: bold;
-	font-size: $context--font-size-h3;
-	margin-bottom: spacing(24);
-	font-family: $context--font-family-serif;
-  line-height: $context--heading-line-height;
+	font-weight: $font-weight-bold;
+	font-size: unquote('min(max(#{$font-size-h3-min}, 4vw), #{$font-size-h3})');
+	margin-bottom: spacing(16);
+	font-family: $font-family-serif;
+	line-height: unquote('min(max(#{$line-height-h3-min}, 4vw), #{$line-height-h3})');
 }
 
 @mixin u-h4() {
-	font-weight: normal;
-	font-size: $context--font-size-h3;
+	font-weight: $font-weight-bold;
+	font-size: unquote('min(max(#{$font-size-h4-min}, 4vw), #{$font-size-h4})');
 	margin-bottom: spacing(16);
-	font-family: $context--font-family-serif;
-  line-height: $context--heading-line-height;
+	font-family: $font-family-sans;
+	line-height: unquote('min(max(#{$line-height-h4-min}, 4vw), #{$line-height-h4})');
 }
 
 @mixin u-h5() {
-	font-weight: bold;
-	font-size: $context--font-size-base;
+	font-weight: $font-weight-bold;
+	font-size: unquote('min(max(#{$font-size-h5-min}, 4vw), #{$font-size-h5})');
 	margin-bottom: spacing(16);
-	font-family: $context--font-family-serif;
-  line-height: 1.2;
-}
-
-@mixin u-small() {
-  font-size: $context--font-size-small;
-}
-
-@mixin u-meta-large() {
-	font-weight: normal;
-  font-family: $context--font-family-sans;
-  font-size: $context--font-size-h3;
-}
-
-@mixin u-meta-medium() {
-	font-weight: normal;
-  font-family: $context--font-family-sans;
-  font-size: $context--font-size-base;
-}
-
-@mixin u-meta-small() {
-  @include u-small();
-	font-weight: normal;
-  font-family: $context--font-family-sans;
+	font-family: $font-family-sans;
+	line-height: unquote('min(max(#{$line-height-h5-min}, 4vw), #{$line-height-h5})');
 }
