--- a/context/brand-context/springernature/scss/40-base/links.scss
+++ b/context/brand-context/springernature/scss/40-base/links.scss
@@ -1,20 +1,3 @@
-/**
- * Links
- * Basic link styles
- */
-
 a {
-	text-decoration: none;
-	vertical-align: baseline;
-	color: color('blue');
-}
-
-a:hover {
-	text-decoration: underline;
-	-webkit-text-decoration-skip: skip;
-	text-decoration-skip: ink;
-}
-
-a:active {
-	outline: 0;
+	@include base-link;
 }
