--- a/context/brand-context/springernature/scss/enhanced.scss
+++ b/context/brand-context/springernature/scss/enhanced.scss
@@ -4,12 +4,14 @@
  */
 
 // Default setting, functions, mixins
-@import '../../default/scss/abstracts';
+@import '~@springernature/brand-context/default/scss/abstracts';
+// @import '../../default/scss/abstracts';
 
 // Springernature settings, functions, mixins
 @import 'abstracts';
 
 // 40-base
+@import '40-base/typography';
 @import '40-base/layout';
 @import '40-base/links';
-@import '40-base/typography';
+@import '40-base/tables';
