[MC] WiP Add SpringerNature brand context
This is taken from work that has been done on Researcher Portal so far.

- Paste all context from Researcher Portal
- Start renaming of variables, all settings layer is done, next step
mixins

--- a/context/brand-context/springernature/scss/abstracts.scss
+++ b/context/brand-context/springernature/scss/abstracts.scss
@@ -4,10 +4,17 @@
  * These files don’t output any CSS when compiled
  */
 
+// 10-settings
 @import '10-settings/breakpoints';
 @import '10-settings/colors/default';
 @import '10-settings/typography';
-@import '10-settings/buttons'; // needs to appear after colors & typography
+@import '10-settings/container';
+// needs to appear after colors & typography
+@import '10-settings/buttons';
+@import '10-settings/links';
+@import '10-settings/tables';
 
 // 30-mixins
+@import '30-mixins/links';
+@import '30-mixins/media-query';
 @import '30-mixins/typography';
