--- a/context/brand-context/springer/scss/40-base/layout.scss
+++ b/context/brand-context/springer/scss/40-base/layout.scss
@@ -24,7 +24,7 @@ html {
 body {
 	max-width: 100%;
 	min-height: 100%;
-	background: $page-base;
+	background: $context--page-background;
 	font-size: 1.8em; /* fixes chrome rems bug - http://stackoverflow.com/questions/20099844/chrome-not-respecting-rem-font-size-on-body-tag */
 }
 
